ROU-3824: Fix accessibility and value-tag issue
Increased prompt text color contrast to improve accessibility and fixed tag overlapping clear button.

--- a/src/scripts/Providers/Dropdown/VirtualSelect/scss/_virtualselect.scss
+++ b/src/scripts/Providers/Dropdown/VirtualSelect/scss/_virtualselect.scss
@@ -54,6 +54,13 @@
 		}
 	}
 
+	&:not(.has-value) {
+		.vscomp-value {
+			color: var(--color-neutral-7);
+			opacity: 1;
+		}
+	}
+
 	&.multiple {
 		.vscomp-search-container {
 			padding-left: var(--space-base);
@@ -107,6 +114,7 @@
 			color: var(--color-neutral-7);
 			font-size: var(--font-size-xs);
 			font-weight: var(--font-semi-bold);
+			margin-right: var(--space-m);
 			padding: 6px 35px 6px 10px;
 			position: relative;
 
@@ -476,14 +484,6 @@
 // Accessibility -----------------------------------------------------------------
 ///
 .has-accessible-features {
-	.vscomp-wrapper {
-		&:not(.has-value) {
-			.vscomp-value {
-				opacity: 0.8;
-			}
-		}
-	}
-
 	.vscomp-toggle-button {
 		border-color: var(--color-neutral-7);
 		color: var(--color-neutral-10);
